# uv-project-template

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml
docs/: index.md  io.md
docs/reference/: hdfs.md  parquet.md  s3.md
io/: index.html
reference/hdfs/: index.html
reference/parquet/: index.html
reference/s3/: index.html
search/: search_index.json
src/common_example/: __init__.py
src/common_example/services/io/: __init__.py  deltalake_manager.py  hdfs_manager.py  parquet_manager.py  s3_manager.py
src/common_example/utils/: io.py
